--- a/index.html
+++ b/index.html
@@ -4,15 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BIRRRRRDDDSSSS</title>
+    <title>Avon Old Farms - The Birds play</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        body,
-        html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-        }
-        
         body {
             background-image: url('bird.jpg');
             background-position: center;
@@ -22,6 +16,20 @@
     </style>
 </head>
 
-<body></body>
+<body class="min-h-screen flex items-center justify-center">
+    <div class="bg-white bg-opacity-80 p-8 rounded-lg shadow-lg max-w-2xl">
+        <h1 class="text-4xl font-bold mb-4 text-center text-gray-800">The Birds</h1>
+        <p class="text-lg mb-6 text-gray-700">
+            The birds is a play, very good. birds.
+        </p>
+        <h2 class="text-2xl font-semibold mb-4 text-gray-800">Cast</h2>
+        <ul class="space-y-2 text-gray-700">
+            <li><span class="font-bold">DIANE:</span> Sophia Cepeda</li>
+            <li><span class="font-bold">NAT:</span> Joon Lee</li>
+            <li><span class="font-bold">JULIA:</span> Emmy Willis</li>
+            <li><span class="font-bold">TIERNEY:</span> Patrick Peng</li>
+        </ul>
+    </div>
+</body>
 
 </html>
