--- a/index.html
+++ b/index.html
@@ -20,8 +20,14 @@
     <div class="bg-white bg-opacity-80 p-8 rounded-lg shadow-lg max-w-2xl">
         <h1 class="text-4xl font-bold mb-4 text-center text-gray-800">The Birds</h1>
         <p class="text-lg mb-6 text-gray-700">
-            The birds is a play, very good. birds.
+            The birds is a play, very good. Birds.
         </p>
+
+        <!-- Added YouTube video embed -->
+        <div class="flex justify-center mb-6">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/cfWk1m6E-tY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+
         <h2 class="text-2xl font-semibold mb-4 text-gray-800">Cast</h2>
         <ul class="space-y-2 text-gray-700">
             <li><span class="font-bold">DIANE:</span> Sophia Cepeda</li>
