--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             <li><span class="font-bold">NAT:</span> Joon Lee</li>
             <li><span class="font-bold">JULIA:</span> Emmy Willis</li>
             <li><span class="font-bold">TIERNEY:</span> Patrick Peng</li>
+            <li><span class="font-bold">DIRECTOR:</span> Mrs. Couch & Mrs. Freeman</li>
+            <li><span class="font-bold">BIRDS</span> Ethan Renvyle, Luca Coletti, Terrance Tao</li>
         </ul>
     </div>
 </body>
