--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 
         <h2 class="text-2xl font-semibold mb-4 text-gray-800">Cast</h2>
         <ul class="space-y-2 text-gray-700">
-            <li><span class="font-bold">DIANE:</span> Sophia Cepeda</li>
+            <li><span class="font-bold">DIANE:</span> so<span >f</span>ia Cepeda</li>
             <li><span class="font-bold">NAT:</span> Joon Lee</li>
             <li><span class="font-bold">JULIA:</span> Emmy Willis</li>
-            <li><span class="font-bold">TIERNEY:</span> Patrick Peng</li>
             <li><span class="font-bold">DIRECTOR:</span> Mrs. Couch & Mrs. Freeman</li>
             <li><span class="font-bold">BIRDS</span> Ethan Renvyle, Luca Coletti, Terrance Tao</li>
         </ul>
+        
     </div>
 </body>
 
